--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -10,7 +10,9 @@ $backgroundColor: #2b2d42;
 }
 
 .header-a {
-  color: red;
+  font-family: Roboto;
+  font-weigh: bold;
+  font-size: 20px;
   text-decoration: none;
   border-bottom: 1px solid $backgroundColor;
 }
