--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -1,4 +1,9 @@
 @import "header";
+@import "banner";
+@import "services";
+@import "map";
+@import "inquiry";
+@import "footer";
 
 $fontColor: #edf2f4;
 $backgroundColor: #2b2d42;
