nodemailer works fine

--- a/public/style/_inquiry.scss
+++ b/public/style/_inquiry.scss
@@ -17,3 +17,17 @@
   padding-bottom: 30px;
   margin: 0;
 }
+
+#inquiry-div-container {
+  background: grey;
+  width: 100%;
+  height: 350px;
+}
+
+#inquiry-left-contianer {
+
+}
+
+#inquiry-right-contianer {
+
+}
