--- a/public/style/_inquiry.scss
+++ b/public/style/_inquiry.scss
@@ -1,3 +1,6 @@
+$fontColor: #edf2f4;
+$backgroundColor: #2b2d42;
+
 #inquiry-container {
   position: relative;
   color: black;
@@ -19,15 +22,93 @@
 }
 
 #inquiry-div-container {
-  background: grey;
   width: 100%;
-  height: 350px;
+  height: auto;
+  min-height: 350px;
 }
 
 #inquiry-left-contianer {
+  height: auto;
+  min-height: 350px;
+  padding: 0px 15px;
+}
 
+#inquiry-left-contianer-left {
+  width: 50%;
+  height: 350px;
+  padding: 0px 10px;
+  float: left;
+}
+
+#inquiry-left-contianer-right {
+  width: 50%;
+  height: 350px;
+  padding: 0px 10px;
+  float: right;
+}
+
+.info-input {
+  width: 100%;
+  height: 45px;
+  padding: 5px 5px;
+  font-size: 20px;
 }
 
 #inquiry-right-contianer {
+  height: auto;
+  min-height: 350px;
+  padding: 0px 15px;
+}
 
+.inputfile {
+	width: 0.1px;
+	height: 0.1px;
+	opacity: 0;
+	overflow: hidden;
+	position: absolute;
+	z-index: -1;
+}
+
+.inputfile + label {
+  width: 160px;
+  height: 50px;
+  font-size: 17px;
+  font-weight: 700;
+  color: white;
+  background-color: #ef233c;
+  display: inline-block;
+  text-align: center;
+  box-shadow: rgba(0, 0, 0, 0.5) 0px 0px 5px 1px;
+  padding-top: 12px;
+  cursor: pointer;
+}
+
+.inputfile:focus + label,
+.inputfile + label:hover {
+  background-color: #d90429;
+}
+
+#file-name-container {
+  width: 60%;
+  height: 50px;
+  float: right;
+}
+
+#comments {
+  resize: none;
+  width: 100%;
+  height: 150px;
+  padding: 5px 10px;
+}
+
+#submit-btn {
+  float: right;
+  background: $backgroundColor;
+  width: 100px;
+  height: 40px;
+  color: white;
+  margin-top: 20px;
+  font-size: 15px;
+  font-size: 17px;
+  border: none;
 }
