--- a/public/style/_services.scss
+++ b/public/style/_services.scss
@@ -1,7 +1,7 @@
 $fontColor: #edf2f4;
 $backgroundColor: #2b2d42;
 
-#services-container {
+#services {
   position: relative;
   width: 100%;
   height: auto;
@@ -13,7 +13,6 @@ $backgroundColor: #2b2d42;
 #services-head-title {
   width: 100%;
   text-align: center;
-  font-family: Roboto;
   font-weight: bold;
   font-size: 36px;
   padding-bottom: 30px;
