--- a/public/style/_footer.scss
+++ b/public/style/_footer.scss
@@ -34,12 +34,12 @@ $backgroundColor: #2b2d42;
 }
 
 #facebook {
-  background: url('http://www.freeiconspng.com/uploads/facebook-icon--basic-round-social-iconset--s-icons-7.png');
+  background: url('/img/facebook_icon.png');
   background-size: 100%;
   margin-right: 10px;
 }
 
 #ins {
-  background: url('http://3835642c2693476aa717-d4b78efce91b9730bcca725cf9bb0b37.r51.cf1.rackcdn.com/Instagram_App_Large_May2016_200.png');
+  background: url('/img/ins_icon.png');
   background-size: 100%;
 }
