--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -8,11 +8,12 @@
 $fontColor: #edf2f4;
 $backgroundColor: #2b2d42;
 
-html, body {
+html, body, #app {
   width: 100%;
   height: 100%;
   color: $fontColor;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 ul {
