--- a/public/style/main.scss
+++ b/public/style/main.scss
@@ -14,6 +14,7 @@ html, body, #app {
   color: $fontColor;
   overflow-x: hidden;
   overflow-y: auto;
+  -webkit-overflow-scrolling: touch;
 }
 
 ul {
