--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -2,29 +2,80 @@ $fontColor: #edf2f4;
 $backgroundColor: #2b2d42;
 
 #header {
-  background: $backgroundColor;
-  padding: 15px 15px;
+  background: #2b2d42;
+  width: 100%;
+  height: 100px;
+  padding: 15px 25px;
   border-radius: 0px;
-  color: $fontColor;
+  color: #edf2f4;
   margin: 0;
   border: none;
 }
 
-.header-a {
-  text-decoration: none;
-  border-bottom: 1px solid $backgroundColor;
+#logo {
+  height: 70px;
+  float: left;
 }
 
-.header-a:hover {
-  text-decoration: underline;
+#header-btn-container {
+  width: 280px;
+  height: 70px;
+  padding: 20px 10px;
+  float: right;
+}
+
+.header-btn {
+  border: none;
+  font-size: 20px;
+  margin-left: 10px;
+  background: transparent;
+  text-decoration: none;
+  border-bottom: 1px solid #2b2d42;
+  outline: none;
+}
+
+.header-btn:hover {
   border-bottom-color: red;
+}
+
+#hambuger-btn {
+  background: none;
+  position: absolute;
+  top: 10px;
+  right: 50px;
+  height: 70px;
+  line-height: 45px;
+  padding: 5px 15px 0px 15px;
+  color: #fff;
+  border: 0;
+  font-size: 4.4em;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
+}
+
+#cross-btn {
+  background: none;
+  position: absolute;
+  width: 85px;
+  height: 100px;
+  top: 18px;
+  right: 53px;
+  line-height: 45px;
+  padding: 3px;
+  color: #fff;
+  border: 0;
+  font-size: 12.6em;
+  font-weight: bold;
+  cursor: pointer;
+  outline: none;
 }
 
 #hamburger-toggle-ul {
   background: $backgroundColor;
   width: 100%;
   position: absolute;
-  top: 80px;
+  top: 100px;
   left: 0px;
   padding: 0;
   z-index: 5;
@@ -58,4 +109,8 @@ $backgroundColor: #2b2d42;
   padding-top: 5px;
   padding-bottom: 5px;
   border-bottom: 1px solid $fontColor;
+}
+
+#hambuger-btn {
+
 }
