--- a/public/style/_header.scss
+++ b/public/style/_header.scss
@@ -91,21 +91,24 @@ $backgroundColor: #2b2d42;
     }
 
     #header-a-h-1 {
-      padding-top: 5px;
-      padding-bottom: 5px;
+      height: 100px;
+      font-size: 40px;
+      padding: 22px 25px;
       border-top: 1px solid $fontColor;
     }
 
     #header-a-h-2 {
-      padding-top: 5px;
-      padding-bottom: 5px;
+      height: 100px;
+      font-size: 40px;
+      padding: 22px 25px;
       border-top: 1px solid $fontColor;
       border-bottom: 1px solid $fontColor;
     }
 
     #header-a-h-3 {
-      padding-top: 5px;
-      padding-bottom: 5px;
+      height: 100px;
+      font-size: 40px;
+      padding: 22px 25px;
       border-bottom: 1px solid $fontColor;
     }
   }
