--- a/public/style/_banner.scss
+++ b/public/style/_banner.scss
@@ -1,14 +1,20 @@
 #banner {
   width: 100%;
   height: auto;
-  background: rgba(0, 0, 0, 0.24);
 
-  #banner-img {
+  #banner-img-container {
     position: relative;
-    background: rgba(255, 0, 0, 0.52);
+    display: flex;
     width: 100%;
-    height: 350px;
+    height: 100%;
     margin-top: 10px;
+    box-shadow: 0px 0px 5px 2px black;
+
+    .banner-img {
+      width: 50%;
+      height: 100%;
+      float: left;
+    }
   }
 
   #banner-div-container {
@@ -22,5 +28,14 @@
       height: 140px;
       border: 1px solid white;
     }
+  }
+
+  .example-enter {
+    opacity: 0.01;
+  }
+
+  .example-enter.example-enter-active {
+    opacity: 1;
+    transition: opacity 200ms ease-in;
   }
 }
