--- a/public/style/_services.scss
+++ b/public/style/_services.scss
@@ -24,8 +24,9 @@ $backgroundColor: #2b2d42;
 
     .services-div {
       background: grey;
-      height: 260px;
-      border: 1px solid white;
+      height: 225px;
+      //border: 1px solid rgba(255, 255, 255, 0);
+      padding: 0;
     }
   }
 }
