--- a/public/style/_services.scss
+++ b/public/style/_services.scss
@@ -23,10 +23,17 @@ $backgroundColor: #2b2d42;
     min-height: 260px;
 
     .services-div {
-      background: grey;
-      height: 225px;
+      //background: grey;
+      height: 235px;
       //border: 1px solid rgba(255, 255, 255, 0);
-      padding: 0;
+      padding: 10px 10px;
+      text-align: center;
+
+      .services-img {
+        width: 100%;
+        max-width: 285px;
+        box-shadow: 0px 0px 5px 5px rgb(2, 2, 2);
+      }
     }
   }
 }
