--- a/public/style/main.css
+++ b/public/style/main.css
@@ -133,9 +133,13 @@
     height: auto;
     min-height: 260px; }
     #services #services-div-container .services-div {
-      background: grey;
-      height: 225px;
-      padding: 0; }
+      height: 235px;
+      padding: 10px 10px;
+      text-align: center; }
+      #services #services-div-container .services-div .services-img {
+        width: 100%;
+        max-width: 285px;
+        box-shadow: 0px 0px 5px 5px #020202; }
 
 .maps iframe {
   pointer-events: none; }
