adjust font-color of banner

--- a/public/style/_banner.scss
+++ b/public/style/_banner.scss
@@ -24,8 +24,9 @@
     min-height: 140px;
 
     .banner-div {
-      background: grey;
-      height: 140px;
+      background: rgba(128, 128, 128, 0.5);
+      height: 150px;
+      color: #2b2d42;
       border: 1px solid white;
     }
   }
