--- a/public/style/main.css
+++ b/public/style/main.css
@@ -106,8 +106,9 @@
     height: auto;
     min-height: 140px; }
     #banner #banner-div-container .banner-div {
-      background: grey;
-      height: 140px;
+      background: rgba(128, 128, 128, 0.5);
+      height: 150px;
+      color: #2b2d42;
       border: 1px solid white; }
   #banner .example-enter {
     opacity: 0.01; }
